# wgut

./: LICENCE  README.md  cgmath.py  cube.py  cube.wgsl  gpu.py  hello_imgui.py  main.py  pyproject.toml  requirements.txt  run_example.py  setup.cfg  shader.wgsl  texture.py  texture.wgsl  triangle.py  triangle.wgsl  window.py
examples/: compute.py  compute.slang  compute.wgsl  cube.py  cube.wgsl  cube_with_auto_pipeline.py  cube_with_builders.py  ecs.py  ecs2.py  ecs3.py  hello_imgui.py  particles.py  particles.wgsl  pygfx_ecs.py  scene.py  scene.wgsl  scene2.py  scene3.py  sea.py  sea.wgsl  shadertoy.py  shadertoy.wgsl  slang.py  strand.py  test.py  texture.py  texture.wgsl  texture_array.py  texture_array.wgsl  texture_old.py  textured_icosphere.py  textured_icosphere.wgsl  triangle.py  triangle.wgsl
src/wgut/: __init__.py  auto_compute_pipeline.py  auto_render_pipeline.py  builders.py  camera.py  cgmath.py  computer.py  core.py  ecs.py  ecs_explorer.py  grammar.py  orbit_camera.py  orbit_controller.py  parser.py  performance_monitor.py  perspective_camera.py  reflection.py  render_gui_system.py  render_system.py  shadertoy.py  slang.py  syntaxtree.py  wgsl_grammar.py  window.py  window_system.py
src/wgut/builders/: __init__.py  bindgroupbuilder.py  bindgrouplayoutbuilder.py  bufferbuilder.py  builderbase.py  commandbufferbuilder.py  computepassbuilder.py  computepipelinebuilder.py  pipelinebuilderbase.py  pipelinelayoutbuilder.py  renderpassbuilder.py  renderpipelinebuilder.py  samplerbuilder.py  texturebuilder.py  vertexbufferdescriptorsbuilder.py
src/wgut/scene/: ambiant_light.py  basic_color_material.py  direction_light.py  ecs.py  ecs_explorer.py  instance_mesh.py  light.py  material.py  material2.py  mesh.py  particles.py  pbr_material.py  pbr_material2.py  performance_monitor.py  point_light.py  (+16 more)
wgut/: window.py
(+8 files in other folders)
