[project]
name = "wgut"
version = "0.1.10"
description = "WebGPU Utility Toolkit: Play with wgpu"
readme = "README.md"
authors = [{ name = "Quentin Lurkin", email = "qlurkin@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "imgui-bundle==1.6.3",
  "pygfx>=0.13.0",
  "scipy>=1.16.2",
  "trimesh>=4.8.3",
  "wgpu>=0.23.0",
]
classifiers = ["License :: OSI Approved :: MIT License"]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["*.wgsl"]

[tool.uv.sources]
pygfx = { git = "https://github.com/qlurkin/pygfx.git", branch = "typefix" }
